# spine-godot

./: SCsub  SpineAnimation.cpp  SpineAnimation.h  SpineAnimationState.cpp  SpineAnimationState.h  SpineAnimationTrack.cpp  SpineAnimationTrack.h  SpineAtlasResource.cpp  SpineAtlasResource.h  SpineBone.cpp  SpineBone.h  SpineBoneData.cpp  SpineBoneData.h  SpineBoneNode.cpp  SpineBoneNode.h  SpineCommon.h  SpineConstant.cpp  SpineConstant.h  SpineConstraintData.h  SpineEditorPlugin.cpp  SpineEditorPlugin.h  SpineEventData.cpp  SpineIkConstraintData.cpp  SpineIkConstraintData.h  SpinePhysicsConstraintData.cpp  SpinePhysicsConstraintData.h  SpineSkeleton.cpp  SpineSkeletonDataResource.cpp  SpineSkeletonDataResource.h  SpineSkeletonFileResource.h  SpineSkin.cpp  SpineSkin.h  SpineSliderData.cpp  SpineSliderData.h  SpineSlotNode.cpp  SpineSlotNode.h  SpineSprite.cpp  SpineSprite.h  SpineTimeline.cpp  SpineTimeline.h  (+3 more)
docs/: SpineBone.xml  SpineBoneData.xml  SpineIkConstraintData.xml  SpinePhysicsConstraintData.xml  SpineSkin.xml  SpineSlot.xml
spine-cpp/: CMakeLists.txt  CMakePresets.json  README.md  build.sh  docs.md
spine-cpp/include/spine/: BonePose.h  SliderData.h
spine-cpp/src/spine/: BonePose.cpp  PathConstraint.cpp  PhysicsConstraint.cpp  SkeletonClipping.cpp  SliderData.cpp  TransformConstraint.cpp
spine-cpp/tests/: HeadlessTest.cpp  JsonWriter.h  MapTest.cpp  SkeletonSerializer.h  test-linux-docker.sh  test.sh
